--- a/week4/package.json
+++ b/week4/package.json
@@ -19,11 +19,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-sass": "^2.0.0",
+    "jit-grunt": "^0.10.0",
     "lite-server": "^2.2.2",
     "node-sass": "^4.6.1",
     "onchange": "^3.2.1",
     "parallelshell": "^3.0.2",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "time-grunt": "^1.4.0"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
