--- a/week4/package.json
+++ b/week4/package.json
@@ -21,8 +21,16 @@
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-imagemin": "^2.0.1",
+    "grunt-contrib-uglify": "^3.1.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-filerev": "^2.3.1",
     "grunt-sass": "^2.0.0",
+    "grunt-usemin": "^3.1.1",
     "jit-grunt": "^0.10.0",
     "lite-server": "^2.2.2",
     "node-sass": "^4.6.1",
