--- a/week4/package.json
+++ b/week4/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.18.13",
     "grunt": "^1.0.1",
     "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-clean": "^1.1.0",
@@ -31,6 +32,8 @@
     "grunt-filerev": "^2.3.1",
     "grunt-sass": "^2.0.0",
     "grunt-usemin": "^3.1.1",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
     "jit-grunt": "^0.10.0",
     "lite-server": "^2.2.2",
     "node-sass": "^4.6.1",
