--- a/week4/package.json
+++ b/week4/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.18.13",
+    "del": "^3.0.0",
     "grunt": "^1.0.1",
     "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-clean": "^1.1.0",
@@ -33,7 +34,14 @@
     "grunt-sass": "^2.0.0",
     "grunt-usemin": "^3.1.1",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.9.0",
+    "gulp-flatmap": "^1.0.0",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-imagemin": "^3.4.0",
+    "gulp-rev": "^8.1.0",
     "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-usemin": "^0.3.28",
     "jit-grunt": "^0.10.0",
     "lite-server": "^2.2.2",
     "node-sass": "^4.6.1",
